# django_app

./: .gitignore  LICENSE  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/config/: router.py  settings.py  urls.py
backend/main_page/: views.py
backend/main_page/admin/: __init__.py  main_page_admin.py
backend/main_page/migrations/: 0001_initial.py
backend/main_page/models/: __init__.py  main_page.py
backend/main_page/serializers/: main_page_serializer.py
backend/tools/: viewsets.py
