[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Sergey Maslov <trubraver@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
python-dotenv = "^1.0.1"
django-parler = "^2.3"
djangorestframework = "^3.15.2"
django-richtextfield = "^1.6.2"
django-solo = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
